--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Insurance Claim Assistant</title>
-    <meta name="description" content="A user-friendly platform designed to help wildfire survivors document and manage their insurance claims efficiently." />
+    <title>Recoverly</title>
+    <meta name="description" content="A user-friendly platform designed to help you document and manage your insurance claims efficiently." />
   </head>
   <body>
     <div id="root"></div>
